# ritc

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs  docker-compose.yml  ritc-spec.json  ritc-test.json  rust-toolchain
benches/: allocator_binary_heap.rs  lib.rs  libc_bheap  libstd_libc  libstd_ritc  libstd_ritc.txt  libstd_ritc_original  syscalls.rs
benches/cursor/: tests.rs
benches/hash/: benches.md
benches/stdio/: tests.rs
benches/util/: tests.rs
ci/: Dockerfile
src/: lib.rs  macros.rs
src/arch/freebsd-x86_64/: mod.rs  nr.rs
src/arch/linux-aarch64/: mod.rs
src/arch/linux-armeabi/: mod.rs
src/arch/linux-mips/: mod.rs
src/arch/linux-powerpc/: mod.rs  nr.rs
src/arch/linux-powerpc64/: mod.rs
src/arch/linux-spac64/: mod.rs  nr.rs
src/arch/linux-x86/: mod.rs  nr.rs
src/arch/linux-x86_64/: mod.rs  nr.rs
src/arch/macos-aarch64/: mod.rs  nr.rs
src/arch/macos-x86_64/: mod.rs  nr.rs
src/archs/linux-aarch64/: nr.rs
src/archs/linux-armeabi/: nr.rs
src/archs/linux-mips/: nr.rs
src/archs/linux-mips64/: mod.rs  nr.rs
src/archs/linux-powerpc64/: nr.rs
src/archs/linux-x86_64/: mod.rs  nr.rs
src/archs/macos-x86_64/: mod.rs
src/error/: mod.rs
src/ffi/: mod.rs
src/io/: copy.rs  cursor.rs  error.rs  impls.rs  mod.rs  prelude.rs  readbuf.rs  stdio.rs  util.rs
src/io/buffered/: bufreader.rs  bufwriter.rs  linewriter.rs  linewritershim.rs  mod.rs  tests.rs
src/malloc/: allocator.rs  blocklist.rs  mmap.rs  mmap_allocator.rs  mod.rs  mremap.rs  munmap.rs
src/malloc/linux/: blocks.rs  mmap.rs  mmap_allocator.rs  mod.rs  mremap.rs  munmap.rs
src/malloc/linux/bollabacator/: mod.rs
src/malloc/linux/bollabacator/slab/: allocator.rs  blockheader.rs  blocklist.rs  mod.rs
src/malloc/linux/os/: getpid.rs  gettid.rs  mod.rs
src/malloc/macos-aarch64/: const_init.rs  mmap.rs  mmap_allocator.rs  mod.rs  mremap.rs  munmap.rs
src/malloc/macos-x86_64/: mmap.rs  mmap_allocator.rs  mod.rs  mremap.rs  munmap.rs
src/net/: linux.rs
src/os/: oserror.rs
src/sys/: futex.rs  memchr.c  memchr.rs  memrchr.rs  mod.rs  sysinfo.rs  thread.rs  thread_info.rs  thread_local_dtor.rs  thread_local_key.rs  timed_wait.rs
src/sys/locks/: futex.rs  futex_rwlock.rs  mod.rs
src/sys/pthread/: attr.rs
src/sys_common/: clone.rs  mod.rs  thread_local_keys.rs
src/sys_common/mutex/: mod.rs
src/sys_common/pthread/: attr.rs  mod.rs
src/sys_common/thread_parker/: mod.rs
src/thread/: local.rs  mod.rs
tests/: alloc_simple.rs  allocator.rs  global.rs  heap.rs  mmap.rs  pthreads.rs  slab_allocator.rs  sys_threads.rs  syscall.rs  threads.rs
