[package]
name = "ritc"
authors = ["Harry Thomas @infosechoudini"]
description = "Rust Inline Toolchain - Raw system calls and networking"
keywords = ["net", "syscall", "system", "no_std"]
version = "0.1.0"
edition = "2021"
license="Apache-2.0"
readme = "README.md"
categories = ["network-programming", "no-std-library", "embedded-development", "operating-systems"]

[lib]
name = "ritc"
crate-type = ["rlib"]

[dependencies]
core = { version = "1.0.0", optional = true, package = 'rustc-std-workspace-core' }
rustc-std-workspace-alloc = { version = "1.0.0", optional = true}
compiler_builtins = { version = "0.1.2", optional = true }


[features]
default = ["rustc-dep-of-std"]
std = []
nightly = []
rustc-dep-of-std = ["nightly", "core", "rustc-std-workspace-alloc", "compiler_builtins"]


[dev-dependencies]
criterion = { version = "0.3.5", features = ["html_reports"] }
libc = "0.2"

[[bench]]
name = "syscalls"
harness = false


[badges]
maintenance = { status = "experimental" }