[package]
name = "ritc"
authors = ["Harry Thomas @infosechoudini"]
description = "Rust Inline Toolchain - Raw system calls and networking"
keywords = ["net", "syscall", "system", "no_std"]
version = "0.1.0"
edition = "2021"
license="Apache-2.0"
readme = "README.md"
categories = ["network-programming", "no-std-library", "embedded-development", "operating-systems"]

[lib]
name = "ritc"
crate-type = ["lib"]
doctest = false



[dependencies]
core = { version = "1.0.0", optional = true, package = 'rustc-std-workspace-core' }
rustc-std-workspace-alloc = { version = "1.0.0", optional = true}
alloc = { version = "1.0.0", optional = true, package = "rustc-std-workspace-alloc" }

[features]
default = []
std = []
nightly = []
rustc-dep-of-std = ["nightly", "core", "alloc"]


[dev-dependencies]
criterion = { version = "0.3", features = ["html_reports"] }
libc = "0.2"
rand = "0.7"
rand_xorshift = "0.2"


[[bench]]
name = "alloc"
path = "benches/lib.rs"
test = false 

[[bench]]
name = "heap_bench"
path = "benches/allocator_binary_heap.rs"
harness = false

[badges]
maintenance = { status = "experimental" }

[profile.dev]
panic = "abort"
lto = true

[profile.release]
panic = "abort"
lto = true
opt-level = "s"

